--- a/index.html
+++ b/index.html
@@ -809,6 +809,11 @@
     <div id="OOXX4" style="display: none;">
 
         <div class="basic">
+            <p class="introduction_B">未來展望｜</p>
+            <p class="introduction">
+                新增邀請在線朋友功能
+                <br>
+            </p>
             <p class="introduction_B">Other｜</p>
             <p class="introduction">
                 Built in 2024-12
