--- a/index.html
+++ b/index.html
@@ -271,6 +271,14 @@
                 <br>
                 ✓ 支援排行榜顯示
                 <br>
+                ————————
+                <br>
+                更新內容
+                <br>
+                ✓ 新增 Single 玩法 Leave 功能
+                <br>
+                ✓ 新增 About OOXX
+                <br>
                 <br>
                 <a class="link" href="OpenOOXX1.0.apk" download="OpenOOXX1.0.apk"><span
                         class="English">Download</span></a>
