--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <br>
             </p>
             <p id="sentence_Chinese">
-                <span class="English">Open Version 1.0　</span><a class="link" href="OpenOOXX1.0.apk"
+                <span class="English">Open Version 2.0　</span><a class="link" href="OpenOOXX2.0.apk"
                     download="OOXX.apk"><span class="English">Download</span></a>
             </p>
         </div>
@@ -257,6 +257,32 @@
     <div id="OOXX2" style="display: none;">
 
         <div class="basic">
+            <p class="introduction_B">Open Version 2.0｜</p>
+            <p class="introduction">
+                ✓ 支援用戶設定
+                <br>
+                ✓ 支援 Single 玩法
+                <br>
+                ✓ 支援 Create 玩法
+                <br>
+                ✓ 支援 Join 玩法
+                <br>
+                ✓ 支援 Random 玩法
+                <br>
+                ✓ 支援排行榜顯示
+                <br>
+                ————————
+                <br>
+                修復內容
+                <br>
+                ✓ 修復連機玩法 Leave 功能異常
+                <br>
+                <br>
+                <a class="link" href="OpenOOXX2.0.apk" download="OpenOOXX2.0.apk"><span
+                        class="English">Download</span></a>
+                <br>
+                <br>
+            </p>
             <p class="introduction_B">Open Version 1.0｜</p>
             <p class="introduction">
                 ✓ 支援用戶設定
