--- a/index.html
+++ b/index.html
@@ -242,6 +242,10 @@
                     <strong>✓ 排行榜</strong>
                     <br>
                     　查看全部用戶排行榜、查看朋友排行榜
+                    <br>
+                    <br>
+                    <strong>✗ 僅支援安卓11.0以上系統</strong>
+                    <br>
                 </p>
                 <p class="introduction_B">Built With｜</p>
                 <p class="introduction">
@@ -277,6 +281,10 @@
                 <br>
                 ✓ 修復連機玩法 Leave 功能異常
                 <br>
+                ————————
+                <br>
+                ✗ 僅支援安卓11.0以上系統
+                <br>
                 <br>
                 <a class="link" href="OpenOOXX2.0.apk" download="OpenOOXX2.0.apk"><span
                         class="English">Download</span></a>
@@ -304,6 +312,10 @@
                 ✓ 新增 Single 玩法 Leave 功能
                 <br>
                 ✓ 新增 About OOXX
+                <br>
+                ————————
+                <br>
+                ✗ 僅支援安卓11.0以上系統
                 <br>
                 <br>
                 <a class="link" href="OpenOOXX1.0.apk" download="OpenOOXX1.0.apk"><span
