--- a/index.html
+++ b/index.html
@@ -857,7 +857,29 @@
         <div class="basic">
             <p class="introduction_B">未來展望｜</p>
             <p class="introduction">
-                新增邀請在線朋友功能
+                <strong>帳號</strong>
+                <br>
+                ✓ 多元註冊、登入方式
+                <br>
+                <br>
+                <strong>社群</strong>
+                <br>
+                ✓ 邀請在線朋友
+                <br>
+                ✓ 對戰時互相發送訊息
+                <br>
+                ✓ 將對手加為好友
+                <br>
+                <br>
+                <strong>玩法</strong>
+                <br>
+                ✓ 人機玩法
+                <br>
+                ✓ 自定義棋盤玩法
+                <br>
+                ✓ 多局對戰系列賽玩法
+                <br>
+                ✓ 再來一局
                 <br>
             </p>
             <p class="introduction_B">Other｜</p>
